kustom-webapp/base/stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mywebapp-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /mywebapp
